--- a/serverless.yml
+++ b/serverless.yml
@@ -36,9 +36,9 @@ custom:
     ## Serverless-single-page-app-plugin configuration:
   s3LocalPath: ${self:custom.client.distributionFolder}/
   s3BucketName: ${self:custom.client.bucketName}
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  # you can overwrite defaults here
+  stage: dev
+  region: eu-central-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iam:
